[gd_scene load_steps=5 format=3 uid="uid://ld7d3wsjunoo"]

[ext_resource type="Script" path="res://scenes/gui/inventory/weapon_switcher.gd" id="1_mgcwv"]
[ext_resource type="Texture2D" uid="uid://ckokdgtal17wq" path="res://art/gui/InventoryRect.png" id="2_pbbc2"]
[ext_resource type="Texture2D" uid="uid://c8sp0p78c5y8v" path="res://art/gui/inventorySlot.png" id="3_4vxo1"]

[sub_resource type="LabelSettings" id="LabelSettings_wx74s"]
shadow_size = 5
shadow_color = Color(0, 0, 0, 1)

[node name="WeaponSwitcher" type="Control"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
scale = Vector2(0.7, 0.7)
script = ExtResource("1_mgcwv")

[node name="WeaponSwitchPanel" type="NinePatchRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(31, 30)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("2_pbbc2")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="Background" type="Sprite2D" parent="WeaponSwitchPanel"]
position = Vector2(16, 16)
texture = ExtResource("3_4vxo1")
vframes = 2
frame = 1

[node name="WeaponIcon" type="TextureRect" parent="WeaponSwitchPanel"]
z_index = 1
clip_contents = true
custom_minimum_size = Vector2(12, 12)
layout_mode = 0
offset_left = 10.0
offset_top = 8.57143
offset_right = 22.0
offset_bottom = 20.5714
expand_mode = 1
stretch_mode = 5

[node name="WeaponName" type="Label" parent="WeaponSwitchPanel"]
z_index = 2
layout_mode = 0
offset_left = 9.0
offset_top = 19.0
offset_right = 64.0
offset_bottom = 42.0
scale = Vector2(0.25, 0.25)
label_settings = SubResource("LabelSettings_wx74s")
horizontal_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="ShurikenCount" type="Label" parent="WeaponSwitchPanel"]
z_index = 2
layout_mode = 0
offset_left = 17.1429
offset_top = 14.2857
offset_right = 50.1429
offset_bottom = 37.2857
scale = Vector2(0.25, 0.25)
text = "25"
horizontal_alignment = 1
